Puliendo el sistema e monitoreo, nuevo sistema de alertas con sensores.